--- a/Views/Entradas/Edit.cshtml
+++ b/Views/Entradas/Edit.cshtml
@@ -12,7 +12,7 @@
 
 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-<form enctype="multipart/form-data" asp-action="Editar" id="formEntrada">
+<form enctype="multipart/form-data" asp-action="Edit" id="formEntrada">
     <div class="mb-3">
         <label asp-for="Titulo" class="form-label"></label>
         <input asp-for="Titulo" type="text" autocomplete="off" class="form-control" />
