--- a/Views/Entradas/Details.cshtml
+++ b/Views/Entradas/Details.cshtml
@@ -1,9 +1,11 @@
 ﻿@using BlogMVC.Services
+@using BlogMVC.Utils
 @model EntryDetailsVM
 
 @{
     ViewData["Title"] = Model.Titulo;
     var fechaPublicacionFormat = Model.FechaPublicacion.ToString("dd MMM, yyyy");
+    var urlRetorno = Context.ObtenerUrlRetorno();
 }
 
 <div class="d-flex justify-content-between align-items-center flex-wrap">
@@ -33,6 +35,29 @@
 }
 
 <div id="contenido"></div>
+
+<hr />
+
+<h2>Deja un Comentario</h2>
+
+@if(User.Identity!.IsAuthenticated)
+{
+    <form asp-action="Comentar" asp-controller="Comments">
+        <input type="hidden" asp-for="Id"/>
+        <div style="max-width: 600px">
+            <textarea id="cuerpo" name="cuerpo" required class="form-control"
+            style="height: 100px" placeholder="Escribe un comentario..."
+            ></textarea>
+
+            <div class="d-flex justify-content-end mt-2">
+                <button type="submit" class="btn btn-primary">Comentar</button>
+            </div>
+        </div>
+    </form>
+} else
+{
+    <p>Logueate para comentar <a asp-controller="Users" asp-action="Login" asp-route-urlRetorno="@urlRetorno">aqui</a></p>
+}
 
 <input type="hidden" id="cuerpoDelta" name="cuerpoDelta" value="@Model.Cuerpo" />
 
