--- a/Views/Home/Components/ListadoEntradas.razor
+++ b/Views/Home/Components/ListadoEntradas.razor
@@ -2,8 +2,8 @@
 @using BlogMVC.Models
 @using Microsoft.EntityFrameworkCore
 @inject IDbContextFactory<ApplicationDbContext> dbFactory
+@inject IJSRuntime JS
 @implements IDisposable
-
 <div class="row row-cols-1 row-cols-md-3 g-4">
     @foreach (var entrada in entradasVMs)
     {
@@ -27,7 +27,7 @@
                     <p class="card-text">
                         <small class="text-body-secondary">
                             @entrada.FechaPublicacion.ToString("dd MMM, yyyy")
-                    </small>
+                        </small>
                     </p>
                 </div>
             </div>
@@ -35,20 +35,43 @@
     }
 </div>
 
-@code {
+@if(cargando)
+{
+    <img width="150" class="mt-3" src="~/img/loading.gif" />
+}
 
+<div id="cargar-mas" style="height: 10px;"></div>
+
+@code {
     private ApplicationDbContext? dbContext;
     public List<HomeIndexEntradasVM> entradasVMs = [];
+    public int indice = 0;
+    public int cantidadRegistrosSolcitar = 10;
+    public bool seguirBuscandoEntradas = true;
+    public bool cargando = true;
 
     protected override async Task OnInitializedAsync()
     {
         dbContext = dbFactory.CreateDbContext();
+        await BuscarEntradas();
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (firstRender)
+        {
+            await JS.InvokeVoidAsync("observarElemento", "cargar-mas", DotNetObjectReference.Create(this));
+        }
     }
 
     private async Task BuscarEntradas()
     {
-        entradasVMs = await dbContext!.Entries
+        cargando = true;
+        StateHasChanged();
+        var entradasLocal = await dbContext!.Entries
         .OrderByDescending(c => c.FechaPublicacion)
+        .Skip(indice)
+        .Take(cantidadRegistrosSolcitar)
         .Select(c => new HomeIndexEntradasVM()
             {
                 Id = c.Id,
@@ -56,10 +79,30 @@
                 PortadaUrl = c.PortadaUrl,
                 FechaPublicacion = c.FechaPublicacion
             }).ToListAsync();
+
+        seguirBuscandoEntradas = entradasLocal.Any();
+        entradasVMs.AddRange(entradasLocal);
+        indice += cantidadRegistrosSolcitar;
+        cargando = false;
+    }
+
+    [JSInvokable]
+    public async Task CargarMasElementos()
+    {
+        if(cargando)
+        {
+            return;
+        }
+        if (seguirBuscandoEntradas)
+        {
+            await BuscarEntradas();
+            StateHasChanged();
+        }        
     }
 
     public void Dispose()
     {
         dbContext?.Dispose();
     }
+    
 }
