--- a/Views/Entradas/Crear.cshtml
+++ b/Views/Entradas/Crear.cshtml
@@ -27,9 +27,17 @@
     </div>
 
     <div class="mb-3">
+        <input type="hidden" asp-for="ImagenPortadaIA" />
         <label asp-for="ImagenPortada" class="form-label"></label>
         <input asp-for="ImagenPortada" type="file" class="form-control" onchange="mostrarPrevisualizar(event)" />
+
         <img id="PreviewImagen" class="mt-03" style="display: none; width: 400px" />
+
+        <div>
+            <img id="loading-imagen-ia" class="mt-2 mb-2" style="width: 100px; display: none" src="~/img/loading.gif" />
+        </div>
+
+        <button type="button" class="btn btn-secondary mt-2" onclick="generarImagen()">Generar</button>
         <span asp-validation-for="ImagenPortada" class="text-danger"></span>
     </div>
 
